# read-config-rs

./: Cargo.toml  rustfmt.toml  test.env  test.toml  test.yaml  text.json
src/: data.rs  func.rs  json.rs  main.rs  toml.rs
src/formats/: env.rs  mod.rs  toml.rs  yaml.rs
