[package]
name = "rust_type_safe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.3.19"
dotenv = "0.15.0"
bytes = { version = "1.4.0", optional = true, features = ["std", "serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_derive = { version = "~1.0", optional = true }
serde_json = { version = "~1.0", features = ["std", "alloc", "preserve_order", "raw_value"] }
serde_yaml = "0.9.25"
toml = "0.7.6"
